crates/musa-syntax/tests/suite/snapshots/suite__parser__a_block_holding_two_expressions_names_the_rule.snap
---
source: crates/musa-syntax/tests/parser.rs
expression: print_errors(&doc)
---
51..54: a block holds one expression
  label: a second expression begins here
  help: braces delimit a body, they do not sequence one: `{ e }` is `e`
