crates/musa-syntax/tests/suite/snapshots/suite__parser__missing_semicolon_recovers_and_continues.snap
---
source: crates/musa-syntax/tests/parser.rs
expression: print_errors(&doc)
---
25..25: missing `;`
  label: it goes here
  fix: add `;` -> ";"
