crates/musa-syntax/tests/suite/snapshots/suite__parser__the_old_function_body_spelling_is_a_migration_error.snap
---
source: crates/musa-syntax/tests/parser.rs
expression: print_errors(&doc)
---
39..51: a function body is written in braces
  label: this body is `= expression;`
  help: `fn f(x: Nat) -> Nat { g(x) }` — the braces are the body, and they hold one expression
  fix: write the body in braces -> "{ add(x, x) }"
